Closed
Bug 420699
Opened 18 years ago
Closed 18 years ago
REGRESSION:[Mac] Space bar does not scroll page when Japanese IM(Kotoeri) is on
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: louise6380, Assigned: masayuki)
References
()
Details
(4 keywords)
Attachments
(1 file)
|
1.10 KB,
patch
|
jaas
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008030204 Minefield/3.0b4pre
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008030204 Minefield/3.0b4pre
When Japanese IM (Kotoeri) is in Hiragana mode, hitting space bar does not scroll the page down (it works when it is in Alphabet mode)
Reproducible: Always
Steps to Reproduce:
1.Go to a web site that is longer than one page
2.Turn Japanese IM (Kotoeri) on and change to Hiragana mode
3.Hit space bar
Actual Results:
Mouse pointer disappears(Normal behaviour when you start typing text in textbox, if the setting is checked in OS X preference) but nothing else.
Expected Results:
Mouse pointer should stay and the page should be scrolled down one page as PageDown key does.
Keywords: regression
Summary: [Mac] Space bar does not scroll page when Japanese IM(Kotoeri) is on → REGRESSION:[Mac] Space bar does not scroll page when Japanese IM(Kotoeri) is on
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → joshmoz
Status: UNCONFIRMED → NEW
Component: Keyboard Navigation → Widget: Cocoa
Ever confirmed: true
Product: Firefox → Core
QA Contact: keyboard.navigation → cocoa
Target Milestone: --- → mozilla1.9
| Assignee | ||
Comment 1•18 years ago
|
||
the patch will be coming.
| Assignee | ||
Comment 2•18 years ago
|
||
fix.
But I'm not sure that this change doesn't have any regressions.
| Assignee | ||
Comment 3•18 years ago
|
||
testcase for the patch. it's a IME disabled textarea.
Attachment #307420 -
Flags: superreview?(roc)
Attachment #307420 -
Flags: review?(joshmoz)
Attachment #307420 -
Flags: review+
Attachment #307420 -
Flags: superreview?(roc) → superreview+
landed on trunk
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•15 years ago
|
Keywords: inputmethod
You need to log in
before you can comment on or make changes to this bug.
Description
•