fix scrolling with the space bar when using Japanese IME. Patch my Masayuki Nakano. b=420699 r=josh sr=roc